ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cjoc
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/app-root: "https://$best_http_host/cjoc/teams-check/"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    # Uncomment the next line if NGINX Ingress Controller is configured to do SSL offloading at load balancer level
    # nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    # "413 Request Entity Too Large" uploading plugins, increase client_max_body_size
    nginx.ingress.kubernetes.io/proxy-body-size: 50m
    nginx.ingress.kubernetes.io/proxy-request-buffering: "off"
    certmanager.k8s.io/cluster-issuer: "letsencrypt-prod"
    certmanager.k8s.io/acme-challenge-type: http01
spec:
  # SSL offloading at ingress resource level
  tls:
  - hosts:
    - k8s.perficientdevops.com
    secretName: cloudbees-cjoc-letsencrypt-prod
  rules:
  - http:
      paths:
      - path: /cjoc
        backend:
          serviceName: cjoc
          servicePort: 80
    host: k8s.perficientdevops.com
